Uploading from VS

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     Hello, world! Hello, again!
     This is Mihreteab55
     Where is this going! This me from atom!
-    Editing this line!
+    Editing this line! Am from VS code!
   </body>
 </html>
