To see what happen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     Hello, world! Hello, again!
     This is Mihreteab55
-    Where is this going! This me from atom!
+    I just edited line 10
     Editing this line! Am from VS code!
   </body>
 </html>
