--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     Hello, world! Hello, again!
     This is Mihreteab55
-    I just edited line 10
+    I just edited line 10 and see how it works!
     Editing this line! Am from VS code!
   </body>
 </html>
