--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     This is Mihreteab55
     I just edited line 10, what about this line!
     Editing this line! Am from VS code!
+    Adding new thing!
   </body>
 </html>
